tests/ui/expr/malformed_closure/ruby_style_closure.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/ruby_style_closure.rs:12:14
   |
LL |         Some(x * 2)
   |              ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
